# Team-Lobachevsky-nm-1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bazel-Team-Lobachevsky-nm-1  bazel-bin  bazel-out  bazel-testlogs  main.cc  main.py  shell.nix
gui/: Makefile  gui  gui.pro  gui.pro.user.142f141  mainwindow.h  mainwindow.ui  moc_qcustomplot.cpp  ui_mainwindow.h
src/: CMakeLists.txt  main.cc
src/core/: BUILD  CMakeLists.txt  main.cc
src/core/include/: logger.hpp  nmlib.hpp
src/core/src/: methods.cc  nmlib.cc
src/gui/: CMakeLists.txt  tablewindow.ui
src/gui/src/: main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  moc_mainwindow.cc  tablewindow.cc  tablewindow.h  tablewindow.ui
src/gui/src/lib/: mainwindow.cc
src/pynm/: BUILD  __init__.py
src/pynm/modules/: ccalc.py
src/qcplib/: CMakeLists.txt
